@@ -8,7 +8,7 @@ org.freedesktop.dbus.AbstractConnection$FallbackContainer = ERR
 org.freedesktop.dbus.AbstractConnection$_thread = ERR
 org.freedesktop.dbus.AbstractConnection$_sender = ERR
 org.freedesktop.dbus.DirectConnection = ERR
-org.freedesktop.dbus.DBusConnection = ERR
+org.freedesktop.dbus.DBusConnection = VERBOSE
 org.freedesktop.dbus.DBusConnection$PeerSet = ERR
 org.freedesktop.dbus.AbstractConnection$1 = ERR
 org.freedesktop.dbus.DBusSignal = ERR
